cargo-desugar/tests/ui/braces-in-match-scrutinee.out
error: expected one of `...`, `..=`, `..`, or `|`, found `:`
  --> tests/ui/braces-in-match-scrutinee.desugared.rs:17:57
   |
17 | let value_27 = match std::option::Option::<i32>::Some{ 0: 3 } {
   |                                                         ^ expected one of `...`, `..=`, `..`, or `|`

error: expected one of `.`, `;`, `?`, `else`, or an operator, found `{`
  --> tests/ui/braces-in-match-scrutinee.desugared.rs:17:63
   |
17 | let value_27 = match std::option::Option::<i32>::Some{ 0: 3 } {
   |                                                               ^ expected one of `.`, `;`, `?`, `else`, or an operator

error: `match` arm with no body
  --> tests/ui/braces-in-match-scrutinee.desugared.rs:17:56
   |
17 | let value_27 = match std::option::Option::<i32>::Some{ 0: 3 } {
   |                                                        ^^^^
   |
help: add a body after the pattern
   |
17 | let value_27 = match std::option::Option::<i32>::Some{ 0: 3 => { todo!() } } {
   |                                                             ++++++++++++++

error: aborting due to 3 previous errors

